limit treeflow to one inputs

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -72,11 +72,11 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7f80ca74f9c0>)\n",
+       "  |-(compute:<function compute at 0x7f6d1f063a60>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7f80ca74fa60>)\n",
+       "      |-(compute2:<function compute2 at 0x7f6d1f063b00>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
