update distributor name

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -2,35 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -41,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,40 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ProcessQueue(runner=1)]\n",
-       "\n",
-       "  |-(compute:<function compute at 0x7f6d1f063a60>)\n",
-       "\n",
-       "    |-[ProcessQueue(runner=1)]\n",
-       "\n",
-       "      |-(compute2:<function compute2 at 0x7f6d1f063b00>)\n",
-       "\n",
-       "        |-[TransferQueue(runner=1)]\n",
-       "\n",
-       "          |-(printer2:print(step 2,*,**))\n",
-       "\n",
-       "    |-[TransferQueue(runner=1)]\n",
-       "\n",
-       "      |-(printer1:print(step 1,*,**))\n",
-       "\n",
-       "    |-[ProcessQueue(runner=1)]\n",
-       "\n",
-       "      |-(compute3:ComputeClass)\n",
-       "\n",
-       "        |-[TransferQueue(runner=1)]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out_queue= queues.TransferQueue()\n",
     "\n",
@@ -106,7 +58,7 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.compute = communicators.processor.Yield(compute)\n",
+    "        self.compute = communicators.distributors.IteratorDistributor(compute)\n",
     "        self.compute2 = compute2\n",
     "        self.compute3 = ComputeClass(1, 2)\n",
     "        self.printer1 = partials(print, 'step 1')\n",
@@ -123,15 +75,6 @@
     "\n",
     "flow = Flow()\n",
     "flow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_queue.register_callback(print).run()"
    ]
   },
   {
