update internal structure of flow for easier overlap

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -24,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ProcessQueue(runner=1)]\n",
+       "\n",
+       "  |-(compute:<function compute at 0x7f5a5d0eaca0>)-IteratorDistributor\n",
+       "\n",
+       "    |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "      |-(compute2:<function compute2 at 0x7f5a5cf4cf40>)\n",
+       "\n",
+       "        |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "          |-(printer2:print(step 2,*,**))\n",
+       "\n",
+       "    |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "      |-(printer1:print(step 1,*,**))\n",
+       "\n",
+       "    |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "      |-(compute3:ComputeClass)\n",
+       "\n",
+       "        |-[TransferQueue(runner=1)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out_queue= queues.TransferQueue()\n",
     "\n",
@@ -58,19 +106,23 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.compute = communicators.distributors.IteratorDistributor(compute)\n",
+    "        self.compute = compute\n",
     "        self.compute2 = compute2\n",
     "        self.compute3 = ComputeClass(1, 2)\n",
     "        self.printer1 = partials(print, 'step 1')\n",
     "        self.printer2 = partials(print, 'step 2')\n",
     "\n",
     "        self.register_chains(\n",
-    "            (queues.ProcessQueue(5), None, 'compute'),\n",
-    "            (queues.ProcessQueue(5), 'compute', 'compute2'),\n",
-    "            (queues.TransferQueue(), 'compute', 'printer1'),\n",
-    "            (queues.TransferQueue(), 'compute2', 'printer2'),\n",
-    "            (queues.ProcessQueue(), 'compute', 'compute3'),\n",
-    "            (out_queue, 'compute3', None),\n",
+    "            (None, queues.ProcessQueue(5), 'compute'),\n",
+    "            ('compute', queues.ProcessQueue(5), 'compute2'),\n",
+    "            ('compute', queues.TransferQueue(), 'printer1'),\n",
+    "            ('compute2', queues.TransferQueue(), 'printer2'),\n",
+    "            ('compute', queues.ProcessQueue(), 'compute3'),\n",
+    "            ('compute3', out_queue, None),\n",
+    "        )\n",
+    "\n",
+    "        self.register_distributors(\n",
+    "            ('compute', communicators.distributors.IteratorDistributor()),\n",
     "        )\n",
     "\n",
     "flow = Flow()\n",
@@ -79,41 +131,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n"
+     ]
+    }
+   ],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
     "      for i in range(10):\n",
     "         q.put(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow.inputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow.outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_queue.running"
    ]
   },
   {
