update interface of tree

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "import time\n",
     "\n",
     "from plasma.parallel_processing import communicators, queues\n",
-    "from plasma.parallel_processing.communicators.tree_flow import TreeFlow\n",
+    "from plasma.parallel_processing.communicators.tree import TreeFlow\n",
     "from plasma.functional import partials, AutoPipe"
    ]
   },
@@ -72,11 +72,11 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7f5a5d0eaca0>)-IteratorDistributor\n",
+       "  |-(compute:<function compute at 0x7efc71cf2a20>)-IteratorDistributor\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7f5a5cf4cf40>)\n",
+       "      |-(compute2:<function compute2 at 0x7efc71cf2ac0>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -90,7 +90,11 @@
        "\n",
        "      |-(compute3:ComputeClass)\n",
        "\n",
-       "        |-[TransferQueue(runner=1)]"
+       "        |-[TransferQueue(runner=1)]-*\n",
+       "\n",
+       "        |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "          |-(compute2:<function compute2 at 0x7efc71cf2ac0>)..."
       ]
      },
      "execution_count": 4,
@@ -112,17 +116,14 @@
     "        self.printer1 = partials(print, 'step 1')\n",
     "        self.printer2 = partials(print, 'step 2')\n",
     "\n",
-    "        self.register_chains(\n",
-    "            (None, queues.ProcessQueue(5), 'compute'),\n",
-    "            ('compute', queues.ProcessQueue(5), 'compute2'),\n",
-    "            ('compute', queues.TransferQueue(), 'printer1'),\n",
-    "            ('compute2', queues.TransferQueue(), 'printer2'),\n",
-    "            ('compute', queues.ProcessQueue(), 'compute3'),\n",
-    "            ('compute3', out_queue, None),\n",
-    "        )\n",
-    "\n",
-    "        self.register_distributors(\n",
-    "            ('compute', communicators.distributors.IteratorDistributor()),\n",
+    "        self.chain(\n",
+    "            (None, 'compute', queues.ProcessQueue(5), communicators.distributors.IteratorDistributor()),\n",
+    "            ('compute', 'compute2', queues.ProcessQueue(5)),\n",
+    "            ('compute', 'printer1', queues.TransferQueue()),\n",
+    "            ('compute2', 'printer2', queues.TransferQueue()),\n",
+    "            ('compute', 'compute3', queues.ProcessQueue()),\n",
+    "            ('compute3', None, out_queue),\n",
+    "            ('compute3', 'compute2'),\n",
     "        )\n",
     "\n",
     "flow = Flow()\n",
@@ -131,56 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
