--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import plasma.parallel_processing as pp\n",
     "import time"
@@ -21,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +53,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/plasma/parallel_processing/communicators/sequential.py:52: UserWarning: this class is deprecated, use Sequential instead\n",
+      "  warn('this class is deprecated, use Sequential instead')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[ProcessQueue(runner=1)]\n",
+       "\n",
+       "  |-(compute2:<function compute at 0x7fd1d4620040>)\n",
+       "\n",
+       "    |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "      |-(printer:<function print_pass at 0x7fd1d4622ca0>)\n",
+       "\n",
+       "        |-[TransferQueue(runner=1)]\n",
+       "\n",
+       "          |-(aggregator:Aggregator)\n",
+       "\n",
+       "            |-[ThreadQueue(runner=1)]-*"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "outputs = pp.queues.ThreadQueue()\n",
     "class Outer(pp.communicators.Flow):\n",
