update interface of tree

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -35,7 +35,7 @@
     "import time\n",
     "\n",
     "from plasma.parallel_processing import communicators, queues\n",
-    "from plasma.parallel_processing.communicators.tree import TreeFlow\n",
+    "from plasma.parallel_processing.communicators.tree_flow import TreeFlow\n",
     "from plasma.functional import partials, AutoPipe"
    ]
   },
@@ -72,11 +72,11 @@
       "text/plain": [
        "[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7efc71cf2a20>)-IteratorDistributor\n",
+       "  |-(compute:<function compute at 0x7f5a5d0eaca0>)-IteratorDistributor\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7efc71cf2ac0>)\n",
+       "      |-(compute2:<function compute2 at 0x7f5a5cf4cf40>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -90,11 +90,7 @@
        "\n",
        "      |-(compute3:ComputeClass)\n",
        "\n",
-       "        |-[TransferQueue(runner=1)]-*\n",
-       "\n",
-       "        |-[ProcessQueue(runner=1)]\n",
-       "\n",
-       "          |-(compute2:<function compute2 at 0x7efc71cf2ac0>)..."
+       "        |-[TransferQueue(runner=1)]"
       ]
      },
      "execution_count": 4,
@@ -134,7 +130,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 1 a\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 1 b\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n",
+      "step 2 bc\n",
+      "step 2 ac\n",
+      "step 2 bc\n"
+     ]
+    }
+   ],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
