improve rendering + add init

--- a/tests/test_tree_flow.ipynb
+++ b/tests/test_tree_flow.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "import time\n",
     "\n",
     "from plasma.parallel_processing import communicators, queues\n",
-    "from plasma.parallel_processing.communicators.tree_flow import TreeFlow\n",
+    "from plasma.parallel_processing.communicators import TreeFlow\n",
     "from plasma.functional import partials, AutoPipe"
    ]
   },
@@ -70,13 +70,13 @@
     {
      "data": {
       "text/plain": [
-       "[ProcessQueue(runner=1)]\n",
+       "*-[ProcessQueue(runner=1)]\n",
        "\n",
-       "  |-(compute:<function compute at 0x7f5a5d0eaca0>)-IteratorDistributor\n",
+       "  |-(compute:<function compute at 0x7fcf23fd0ea0>)-IteratorDistributor\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(compute2:<function compute2 at 0x7f5a5cf4cf40>)\n",
+       "      |-(compute2:<function compute2 at 0x7fcf23fd0f40>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -90,7 +90,11 @@
        "\n",
        "      |-(compute3:ComputeClass)\n",
        "\n",
-       "        |-[TransferQueue(runner=1)]"
+       "        |-[TransferQueue(runner=1)]-*\n",
+       "\n",
+       "        |-[ProcessQueue(runner=1)]\n",
+       "\n",
+       "          |-(compute2:<function compute2 at 0x7fcf23fd0f40>)..."
       ]
      },
      "execution_count": 4,
@@ -130,54 +134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 1 a\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 1 b\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n",
-      "step 2 bc\n",
-      "step 2 ac\n",
-      "step 2 bc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with flow:\n",
     "   for q in flow.inputs.values():\n",
