add IO to loggers

--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -21,18 +21,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import plasma.logging as plog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@plog.FunctionLogger()\n",
+    "@plog.PrePostLogger()\n",
     "@plog.Timer(log_inputs=True)\n",
     "@plog.ExceptionLogger(raise_on_exception=False, on_exception_return=2)\n",
     "def haha(x):\n",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +60,7 @@
      "output_type": "stream",
      "text": [
       "ExIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
-      "TimeIO(name='haha', timer=(start=2024-12-11 12:29:56.779316, end=2024-12-11 12:29:56.779364, duration=0:00:00.000048), args=(2,), kwargs={})\n",
+      "TimeIO(name='haha', timer=(start=2025-03-26 16:02:25.644361, end=2025-03-26 16:02:25.644391, duration=0:00:00.000030), args=(2,), kwargs={})\n",
       "FuncIO(name='haha', args=(2,), kwargs={}, outputs=2)\n"
      ]
     },
@@ -61,7 +70,7 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
