standardize data object of logger

--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -41,9 +41,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def exception_logger(a:plog.ExceptionLogger.IO):\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@plog.PrePostLogger()\n",
-    "@plog.Timer(log_inputs=True)\n",
-    "@plog.ExceptionLogger(raise_on_exception=False, on_exception_return=2)\n",
+    "@plog.Timer()\n",
+    "@plog.ExceptionLogger(log_func=exception_logger, raise_on_exception=False, on_exception_return=2)\n",
     "def haha(x):\n",
     "    if x == 2:\n",
     "        raise Exception('hehe')\n",
@@ -52,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ExIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
-      "TimeIO(name='haha', timer=(start=2025-03-26 16:02:25.644361, end=2025-03-26 16:02:25.644391, duration=0:00:00.000030), args=(2,), kwargs={})\n",
+      "ExceptionIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
+      "TimeIO(name='haha', timer=Counter(start=datetime.datetime(2025, 3, 26, 16, 18, 3, 632075), end=datetime.datetime(2025, 3, 26, 16, 18, 3, 632131), duration=datetime.timedelta(microseconds=56)), args=(2,), kwargs={})\n",
       "FuncIO(name='haha', args=(2,), kwargs={}, outputs=2)\n"
      ]
     },
@@ -70,7 +80,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
