test new module getattr

--- a/tests/test_huggingface.ipynb
+++ b/tests/test_huggingface.ipynb
@@ -2,64 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plasma.huggingface as hf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching 393 files: 100%|██████████| 393/393 [00:00<00:00, 3163.48it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/u02/thanhhm/research-idea/.cache/MedCat/stamp/cropped/'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hf.download_folder('MedCat/stamp:cropped/')"
+    "#hf.download_folder('MedCat/stamp:cropped/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module = hf.download_module('MedCat/table-vlm')"
    ]
   },
   {
