--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -57,23 +57,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea/plasma/parallel_processing/communicators/sequential.py:52: UserWarning: this class is deprecated, use Sequential instead\n",
-      "  warn('this class is deprecated, use Sequential instead')\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "*-[ProcessQueue(runner=1)]\n",
+       "*-[ProcessQueue(runner=2)]\n",
        "\n",
-       "  |-(compute2:<function compute at 0x7fd87687de40>)\n",
+       "  |-(compute2:<function compute at 0x7f8feb5e5a80>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(printer:<function print_pass at 0x7fd8766c3f60>)\n",
+       "      |-(printer:<function print_pass at 0x7f8feb433ce0>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
@@ -89,7 +81,7 @@
    ],
    "source": [
     "outputs = pp.queues.ThreadQueue()\n",
-    "class Outer(pp.communicators.Flow):\n",
+    "class Outer(pp.communicators.Sequential):\n",
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -115,283 +107,46 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.0625\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 2/20 [00:01<00:00, 19.77it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.125\n",
-      "0.1875\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 4/20 [00:02<00:05,  3.18it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.25\n",
-      "0.3125\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 6/20 [00:03<00:05,  2.51it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.375\n",
-      "0.4375\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 8/20 [00:04<00:05,  2.28it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n",
-      "0.5625\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 10/20 [00:05<00:04,  2.17it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.625\n",
-      "0.6875\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 12/20 [00:06<00:03,  2.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.75\n",
-      "0.8125\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|███████   | 14/20 [00:07<00:02,  2.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.875\n",
-      "0.9375\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 16/20 [00:08<00:01,  2.09it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "1.0625\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 18/20 [00:09<00:00,  2.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.125\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 95%|█████████▌| 19/20 [00:10<00:00,  1.72it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.1875\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:10<00:00,  2.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "with caller:\n",
-    "    for i in range(20):\n",
-    "        caller.put(i)\n",
-    "    \n",
-    "    print(caller.aggregator.wait())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adding new block after outputs already registered, removed old outputs\n"
-     ]
-    }
-   ],
-   "source": [
-    "caller.print = print"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "*-[ProcessQueue(runner=1)]\n",
+       "*-[TransferQueue(runner=1)]\n",
        "\n",
-       "  |-(compute2:<function compute at 0x7fd87687de40>)\n",
+       "  |-(compute2:<function compute at 0x7f8feb5e5a80>)\n",
        "\n",
        "    |-[ProcessQueue(runner=1)]\n",
        "\n",
-       "      |-(printer:<function print_pass at 0x7fd8766c3f60>)\n",
+       "      |-(printer:<function print_pass at 0x7f8feb433ce0>)\n",
        "\n",
        "        |-[TransferQueue(runner=1)]\n",
        "\n",
        "          |-(aggregator:Aggregator)\n",
        "\n",
-       "            |-[ThreadQueue(runner=1)]\n",
-       "\n",
-       "              |-(print:builtin_function_or_method)\n",
-       "\n",
-       "                |-[ThreadQueue(runner=1)]-*"
+       "            |-[ThreadQueue(runner=1)]-*"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "caller.registerIOs(print=pp.queues.ThreadQueue(), outputs=pp.queues.ThreadQueue())"
+    "caller.registerIOs(compute2=pp.queues.TransferQueue())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "*-[ProcessQueue(runner=1)]\n",
-       "\n",
-       "  |-(compute2:<function compute at 0x7fd87687de40>)\n",
-       "\n",
-       "    |-[ProcessQueue(runner=1)]\n",
-       "\n",
-       "      |-(printer:<function print_pass at 0x7fd8766c3f60>)\n",
-       "\n",
-       "        |-[TransferQueue(runner=1)]\n",
-       "\n",
-       "          |-(aggregator:Aggregator)\n",
-       "\n",
-       "            |-[ThreadQueue(runner=1)]\n",
-       "\n",
-       "              |-(print:builtin_function_or_method)\n",
-       "\n",
-       "                |-[ThreadQueue(runner=1)]-*"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "caller.registerIOs(compute2=pp.queues.TransferQueue())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "caller"
    ]
