make queue easier to understand

--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -37,9 +37,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(x):\n",
+    "    return f'{x:05d}'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ThreadQueue(\n",
+       "  name='test',\n",
+       "  num_runner=5,\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -69,16 +92,29 @@
    ],
    "source": [
     "q = queues.ThreadQueue(n=5)\\\n",
-    "    .register_callback(lambda x: f'{x:05d}')\\\n",
+    "    .register_callback(test)\\\n",
     "    .chain(print)\\\n",
-    "    .run()"
+    "    .run()\n",
+    "\n",
+    "q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Signal.IGNORE: 1>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for i in range(20):\n",
     "    q.put(i)\n",
@@ -88,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
